// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascader renders simple list with bands, triggers onApply with multi-select 1`] = `
<DocumentFragment>
  <div
    class="ant-select ant-cascader styledComponents__Cascader-sc-1a2oz4t-2 epNWLK ant-select-focused ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-open ant-select-show-search"
  >
    <div
      class="ant-select-selector"
    >
      <div
        class="ant-select-selection-overflow"
      >
        <div
          aria-hidden="true"
          class="ant-select-selection-overflow-item ant-select-selection-overflow-item-rest"
          style="opacity: 0; height: 0px; overflow-y: hidden; order: 9007199254740991; pointer-events: none; position: absolute;"
        >
          <span
            class="ant-select-selection-item"
          >
            <span
              class="ant-select-selection-item-content"
            >
              <div
                title="SSID 1, SSID 2, 2 bands selected"
              >
                1 item selected
              </div>
            </span>
          </span>
        </div>
        <div
          class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
          style="opacity: 1; order: 0;"
        >
          <div
            class="ant-select-selection-search"
            style="width: 0px;"
          >
            <input
              aria-autocomplete="list"
              aria-controls="rc_select_TEST_OR_SSR_list"
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-owns="rc_select_TEST_OR_SSR_list"
              autocomplete="off"
              class="ant-select-selection-search-input"
              id="rc_select_TEST_OR_SSR"
              role="combobox"
              style=""
              type="search"
              value=""
            />
            <span
              aria-hidden="true"
              class="ant-select-selection-search-mirror"
            >
               
            </span>
          </div>
        </div>
      </div>
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <span
        aria-label="search"
        class="anticon anticon-search ant-select-suffix"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="search"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </span>
    </span>
    <div
      style="position: absolute; top: 0px; left: 0px; width: 100%;"
    >
      <div>
        <div
          class="ant-select-dropdown ant-cascader-dropdown"
          style="opacity: 0; min-width: auto;"
        >
          <div>
            <div
              class="ant-cascader-menus"
            >
              <ul
                class="ant-cascader-menu"
                role="menu"
              >
                <li
                  aria-checked="true"
                  class="ant-cascader-menu-item"
                  data-path-key="n1"
                  role="menuitemcheckbox"
                >
                  <span
                    class="ant-cascader-checkbox ant-cascader-checkbox-checked"
                  >
                    <span
                      class="ant-cascader-checkbox-inner"
                    />
                  </span>
                  <div
                    class="ant-cascader-menu-item-content"
                  >
                    <div
                      class="styledComponents__LabelContainer-sc-1a2oz4t-0 chYmtY"
                      title="SSID 1"
                    >
                      <div
                        class="styledComponents__Label-sc-1a2oz4t-1 cLCbpU"
                      >
                        SSID 1
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  aria-checked="true"
                  class="ant-cascader-menu-item ant-cascader-menu-item-active"
                  data-path-key="n2"
                  role="menuitemcheckbox"
                >
                  <span
                    class="ant-cascader-checkbox ant-cascader-checkbox-checked"
                  >
                    <span
                      class="ant-cascader-checkbox-inner"
                    />
                  </span>
                  <div
                    class="ant-cascader-menu-item-content"
                  >
                    <div
                      class="styledComponents__LabelContainer-sc-1a2oz4t-0 chYmtY"
                      title="SSID 2"
                    >
                      <div
                        class="styledComponents__Label-sc-1a2oz4t-1 cLCbpU"
                      >
                        SSID 2
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  aria-checked="false"
                  class="ant-cascader-menu-item"
                  data-path-key="n3"
                  role="menuitemcheckbox"
                >
                  <span
                    class="ant-cascader-checkbox"
                  >
                    <span
                      class="ant-cascader-checkbox-inner"
                    />
                  </span>
                  <div
                    class="ant-cascader-menu-item-content"
                  >
                    <div
                      class="styledComponents__LabelContainer-sc-1a2oz4t-0 chYmtY"
                      title="SSID 3"
                    >
                      <div
                        class="styledComponents__Label-sc-1a2oz4t-1 cLCbpU"
                      >
                        SSID 3
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  aria-checked="false"
                  class="ant-cascader-menu-item"
                  data-path-key="n4"
                  role="menuitemcheckbox"
                >
                  <span
                    class="ant-cascader-checkbox"
                  >
                    <span
                      class="ant-cascader-checkbox-inner"
                    />
                  </span>
                  <div
                    class="ant-cascader-menu-item-content"
                  >
                    <div
                      class="styledComponents__LabelContainer-sc-1a2oz4t-0 chYmtY"
                      title="SSID 4"
                    >
                      <div
                        class="styledComponents__Label-sc-1a2oz4t-1 cLCbpU"
                      >
                        SSID 4
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
            <div
              class="styledComponents__RadioBandsWrapper-sc-1a2oz4t-5 gXsA-DA"
            >
              <span
                class="styledComponents__RadioBandLabel-sc-1a2oz4t-6 ACqzq"
                style="margin-right: 10px;"
              >
                Radio:
              </span>
              <div
                class="ant-checkbox-group styledComponents__CheckboxGroup-sc-1a2oz4t-7 sTxFe"
              >
                <label
                  class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item"
                >
                  <span
                    class="ant-checkbox ant-checkbox-checked"
                  >
                    <input
                      class="ant-checkbox-input"
                      type="checkbox"
                      value="6"
                    />
                    <span
                      class="ant-checkbox-inner"
                    />
                  </span>
                  <span>
                    6 GHz
                  </span>
                </label>
                <label
                  class="ant-checkbox-wrapper ant-checkbox-group-item"
                >
                  <span
                    class="ant-checkbox"
                  >
                    <input
                      class="ant-checkbox-input"
                      type="checkbox"
                      value="5"
                    />
                    <span
                      class="ant-checkbox-inner"
                    />
                  </span>
                  <span>
                    5 GHz
                  </span>
                </label>
                <label
                  class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item"
                >
                  <span
                    class="ant-checkbox ant-checkbox-checked"
                  >
                    <input
                      class="ant-checkbox-input"
                      type="checkbox"
                      value="2.4"
                    />
                    <span
                      class="ant-checkbox-inner"
                    />
                  </span>
                  <span>
                    2.4 GHz
                  </span>
                </label>
              </div>
            </div>
            <div
              class="styledComponents__ButtonDiv-sc-1a2oz4t-3 cuRSsl"
            >
              <button
                class="ant-btn ant-btn-default ant-btn-sm styledComponents__Button-sc-zk1lj8-0 kBDiup"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary ant-btn-sm styledComponents__Button-sc-zk1lj8-0 kBDiup"
                type="button"
              >
                <span>
                  Apply
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      aria-hidden="true"
      class="ant-select-clear"
      style="user-select: none;"
      unselectable="on"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Cascader should render bands disabled, reset default bands and apply 1`] = `
<DocumentFragment>
  <div
    class="ant-select ant-cascader styledComponents__Cascader-sc-1a2oz4t-2 epNWLK ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-open ant-select-show-search"
  >
    <div
      class="ant-select-selector"
    >
      <div
        class="ant-select-selection-overflow"
      >
        <div
          aria-hidden="true"
          class="ant-select-selection-overflow-item ant-select-selection-overflow-item-rest"
          style="opacity: 0; height: 0px; overflow-y: hidden; order: 9007199254740991; pointer-events: none; position: absolute;"
        >
          <span
            class="ant-select-selection-item"
          >
            <span
              class="ant-select-selection-item-content"
            >
              <div
                title="SSID 3"
              >
                0 items selected
              </div>
            </span>
          </span>
        </div>
        <div
          class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
          style="opacity: 1; order: 0;"
        >
          <div
            class="ant-select-selection-search"
            style="width: 0px;"
          >
            <input
              aria-autocomplete="list"
              aria-controls="rc_select_TEST_OR_SSR_list"
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-owns="rc_select_TEST_OR_SSR_list"
              autocomplete="off"
              class="ant-select-selection-search-input"
              id="rc_select_TEST_OR_SSR"
              role="combobox"
              style=""
              type="search"
              value=""
            />
            <span
              aria-hidden="true"
              class="ant-select-selection-search-mirror"
            >
               
            </span>
          </div>
        </div>
      </div>
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <span
        aria-label="search"
        class="anticon anticon-search ant-select-suffix"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="search"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </span>
    </span>
    <span
      aria-hidden="true"
      class="ant-select-clear"
      style="user-select: none;"
      unselectable="on"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
    <div
      style="position: absolute; top: 0px; left: 0px; width: 100%;"
    >
      <div>
        <div
          class="ant-select-dropdown ant-cascader-dropdown"
          style="opacity: 0; min-width: auto;"
        >
          <div>
            <div
              class="ant-cascader-menus"
            >
              <ul
                class="ant-cascader-menu"
                role="menu"
              >
                <li
                  aria-checked="false"
                  class="ant-cascader-menu-item"
                  data-path-key="n1"
                  role="menuitemcheckbox"
                >
                  <span
                    class="ant-cascader-checkbox"
                  >
                    <span
                      class="ant-cascader-checkbox-inner"
                    />
                  </span>
                  <div
                    class="ant-cascader-menu-item-content"
                  >
                    <div
                      class="styledComponents__LabelContainer-sc-1a2oz4t-0 chYmtY"
                      title="SSID 1"
                    >
                      <div
                        class="styledComponents__Label-sc-1a2oz4t-1 cLCbpU"
                      >
                        SSID 1
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  aria-checked="false"
                  class="ant-cascader-menu-item"
                  data-path-key="n2"
                  role="menuitemcheckbox"
                >
                  <span
                    class="ant-cascader-checkbox"
                  >
                    <span
                      class="ant-cascader-checkbox-inner"
                    />
                  </span>
                  <div
                    class="ant-cascader-menu-item-content"
                  >
                    <div
                      class="styledComponents__LabelContainer-sc-1a2oz4t-0 chYmtY"
                      title="SSID 2"
                    >
                      <div
                        class="styledComponents__Label-sc-1a2oz4t-1 cLCbpU"
                      >
                        SSID 2
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  aria-checked="true"
                  class="ant-cascader-menu-item"
                  data-path-key="n3"
                  role="menuitemcheckbox"
                >
                  <span
                    class="ant-cascader-checkbox ant-cascader-checkbox-checked"
                  >
                    <span
                      class="ant-cascader-checkbox-inner"
                    />
                  </span>
                  <div
                    class="ant-cascader-menu-item-content"
                  >
                    <div
                      class="styledComponents__LabelContainer-sc-1a2oz4t-0 chYmtY"
                      title="SSID 3"
                    >
                      <div
                        class="styledComponents__Label-sc-1a2oz4t-1 cLCbpU"
                      >
                        SSID 3
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  aria-checked="false"
                  class="ant-cascader-menu-item"
                  data-path-key="n4"
                  role="menuitemcheckbox"
                >
                  <span
                    class="ant-cascader-checkbox"
                  >
                    <span
                      class="ant-cascader-checkbox-inner"
                    />
                  </span>
                  <div
                    class="ant-cascader-menu-item-content"
                  >
                    <div
                      class="styledComponents__LabelContainer-sc-1a2oz4t-0 chYmtY"
                      title="SSID 4"
                    >
                      <div
                        class="styledComponents__Label-sc-1a2oz4t-1 cLCbpU"
                      >
                        SSID 4
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
            <div
              class="styledComponents__RadioBandsWrapper-sc-1a2oz4t-5 gXsA-DA"
            >
              <span
                class="styledComponents__RadioBandLabel-sc-1a2oz4t-6 ACqzq"
                style="margin-right: 10px;"
              >
                Radio:
              </span>
              <div
                class="ant-checkbox-group styledComponents__CheckboxGroup-sc-1a2oz4t-7 sTxFe"
              >
                <label
                  class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled ant-checkbox-group-item"
                >
                  <span
                    class="ant-checkbox ant-checkbox-disabled"
                  >
                    <input
                      class="ant-checkbox-input"
                      disabled=""
                      type="checkbox"
                      value="6"
                    />
                    <span
                      class="ant-checkbox-inner"
                    />
                  </span>
                  <span>
                    6 GHz
                  </span>
                </label>
                <label
                  class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled ant-checkbox-group-item"
                >
                  <span
                    class="ant-checkbox ant-checkbox-disabled"
                  >
                    <input
                      class="ant-checkbox-input"
                      disabled=""
                      type="checkbox"
                      value="5"
                    />
                    <span
                      class="ant-checkbox-inner"
                    />
                  </span>
                  <span>
                    5 GHz
                  </span>
                </label>
                <label
                  class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled ant-checkbox-group-item"
                >
                  <span
                    class="ant-checkbox ant-checkbox-disabled"
                  >
                    <input
                      class="ant-checkbox-input"
                      disabled=""
                      type="checkbox"
                      value="2.4"
                    />
                    <span
                      class="ant-checkbox-inner"
                    />
                  </span>
                  <span>
                    2.4 GHz
                  </span>
                </label>
              </div>
              <svg
                class="styledComponents__InfoIcon-sc-1a2oz4t-8 fudJRN"
                data-testid="InformationOutlined"
              />
            </div>
            <div
              class="styledComponents__ButtonDiv-sc-1a2oz4t-3 cuRSsl"
            >
              <button
                class="ant-btn ant-btn-default ant-btn-sm styledComponents__Button-sc-zk1lj8-0 kBDiup"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary ant-btn-sm styledComponents__Button-sc-zk1lj8-0 kBDiup"
                type="button"
              >
                <span>
                  Apply
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
